feat: add dropdowns and text dropdowns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SRC_FILES
     src/Components/Checkbox.cpp
     src/Components/Label.cpp
     src/Components/Dropdown.cpp
+    src/Components/TextDropdown.cpp
 )
 
 add_library(CrazyEngineGUI STATIC ${SRC_FILES})
